data from test added

--- a/EIETdeG.tex
+++ b/EIETdeG.tex
@@ -381,17 +381,17 @@ xvii, 144 pp.}
 %==================================================================
 \chapter{PRUEBAS Y RESULTADOS}\label{CAP:exp}
 %\markboth{Tu Segundo Cap?tulo}{Tu Segundo Cap?tulo}%
-%\input{ch5.tex}
+\input{ch5.tex}
 
 %==================================================================
 \chapter{CONCLUSIONES}\label{CAP:conclu}
 %\markboth{Tu Segundo Cap?tulo}{Tu Segundo Cap?tulo}%
-%\input{conclusiones.tex}
+\input{conclusiones.tex}
 
 %==================================================================
 \chapter{RECOMENDACIONES}\label{CAP:recomend}
 %\markboth{Tu Segundo Cap?tulo}{Tu Segundo Cap?tulo}%
-%\input{recomendaciones.tex}
+\input{recomendaciones.tex}
 
 \appendix
 
